--- a/project/iarcore-android/build.gradle
+++ b/project/iarcore-android/build.gradle
@@ -10,5 +10,5 @@ android
 dependencies
 {
 	implementation project(':deps:extension-api')
-	implementation('com.google.android.play:review:+')
+	implementation('com.google.android.play:review:2.0.2')
 }
